--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
         <p>Hemen gure elkarteari buruzko informazio guztia aurkituko duzu.</p>
     </section>
 
-    <!-- Beste atalak hemen sartuko lirateke -->
+    <section id="events">
+        <h2>Ihardunaldiak</h2>
+        <ul id="event-list"></ul>
+    </section>
+
+    <section id="teams">
+        <h2>Taldeak</h2>
+        <div class="team" id="team1">
+            <h3>Talde 1</h3>
+            <div class="member">
+                <img src="path/to/photo1.jpg" alt="Izena 1">
+                <p>Izena 1</p>
+            </div>
+            <div class="member">
+                <img src="path/to/photo2.jpg" alt="Izena 2">
+                <p>Izena 2</p>
+            </div>
+            <!-- Beste kideak hemen sartuko lirateke -->
+        </div>
+        <!-- Beste taldeak hemen sartuko lirateke -->
+    </section>
 
     <script src="scripts.js"></script>
 </body>
